--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ article .intro {
 
 footer {
   background-color: #1c1b26;
+  background-color: #060b31;
   padding: 5rem 2rem;
 }
 footer > *:not(:first-child) {
@@ -270,19 +271,25 @@ footer .group ul {
 }
 footer .group ul li a {
   text-decoration: none;
-  color: #fdfdff;
+  color: rgba(253, 253, 255, 0.65);
 }
 footer .group ul li a:hover {
   color: #fafafa;
 }
 footer .social ul {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 footer .social ul li {
   display: inline-block;
+  opacity: 0.7;
+  transition: transform 0.08s ease-out;
 }
 footer .social ul li:not(:first-child) {
   margin-left: 1.5rem;
+}
+footer .social ul li:hover {
+  opacity: 1;
+  transform: scale(1.2);
 }
 @media screen and (min-width: 768px) {
   footer {
@@ -332,7 +339,7 @@ footer .social ul li:not(:first-child) {
   max-width: 100%;
 }
 .section.schedule {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/schedule-bg.png");
+  background-image: linear-gradient(to right, rgba(5, 5, 10, 0.85), rgba(5, 5, 10, 0.85)), url("../img/schedule-bg.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
