--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     background-color: #1c1b26;
+    background-color: #060b31;
     padding: 5rem 2rem;
 
     &>*:not(:first-child){
@@ -14,7 +15,7 @@ footer {
             li {
                 a {
                     text-decoration: none;
-                    color: $color-white-primary;
+                    color: rgba($color-white-primary, 0.65);
 
                     &:hover {
                         color: $color-white-secondary;
@@ -26,15 +27,23 @@ footer {
 
     .social {
         ul {
-            margin-top: 1.5rem;
+            margin-top: 1rem;
             
 
             li {
                 display: inline-block;
+                opacity: 0.7;
+                transition: transform 0.08s ease-out;
                 
                 &:not(:first-child) {
                     margin-left: 1.5rem;
                 }
+
+                &:hover {
+                    opacity: 1;
+                    transform: scale(1.2);
+                }
+
             }
         }
     }
