footer bg-color and spacing

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
-    background-color: #1c1b26;
-    background-color: #060b31;
-    padding: 5rem 2rem;
+    background-color: #171524;
+    // background-color: #060b31;
+    padding: 4rem 2rem;
 
     &>*:not(:first-child){
         margin-top: 4.8rem;
