--- a/css/style.css
+++ b/css/style.css
@@ -258,9 +258,8 @@ article .intro {
 }
 
 footer {
-  background-color: #1c1b26;
-  background-color: #060b31;
-  padding: 5rem 2rem;
+  background-color: #171524;
+  padding: 4rem 2rem;
 }
 footer > *:not(:first-child) {
   margin-top: 4.8rem;
