--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h3 {
   font-size: 24px;
   font-family: "Poppins", "Gill Sans", "Gill Sans MT", sans-serif;
   font-weight: 700;
+  color: rgba(253, 253, 255, 0.92);
 }
 
 #brand-text {
@@ -91,7 +92,13 @@ p {
   z-index: 100;
 }
 .section.schedule {
-  color: #fdfdff;
+  color: rgba(253, 253, 255, 0.88);
+}
+.section.schedule h2 {
+  color: rgba(253, 253, 255, 0.92);
+}
+.section.schedule .row > div p {
+  text-align: justify;
 }
 .section .text-content p {
   margin-bottom: 0rem;
