--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $color-primary-medium: hsl(39, 95%, 47%);
 $color-primary-dark: #d9741d;
 
 $color-secondary: #1a084a;
-$color-secondary-light: hsl(256, 50%, 96%);
+$color-secondary-light: #f8f7fb;
 
 // FONT-SIZES
 $font-size-heading1: 56px;
